<resources>
    <string name="app_name">Sliide</string>

    <!-- Strings used for fragments for navigation -->
    <string name="splashscreen_fragment_label">Splashscreen Fragment</string>
    <string name="users_list_fragment_label">Users List Fragment</string>

    <string name="add_user">Add user</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="user_removal_confirmation">Are you sure you want to remove this user?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_id">User Id</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="active">Active</string>
    <string name="user_id_default_value">0</string>

</resources>